Fix alignement with Lists Statuses

--- a/cpmac/app/app.scss
+++ b/cpmac/app/app.scss
@@ -137,4 +137,7 @@ TabView {
   color: #919dad;
   font-size: 17;
   text-transform: uppercase;
+  horizontal-align: right;
+  text-align: right;
+  vertical-align: center;
 }
